Fix button alignment issues for the mobile site

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,15 @@ small {
     padding: 1em;
     border-radius: .625em;
     margin: 1em 0 2.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .buy-now img {
@@ -201,6 +210,9 @@ form {
     padding: 1em;
     border-radius: .625em;
     margin-bottom: 2.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 form h3 {
@@ -446,6 +458,7 @@ footer small {
 
     form {
         display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
         gap: 2em;
